--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2187,8 +2187,8 @@ input, select, textarea {
 	button,
 	.button {
 		background-color: transparent;
-		box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.2);
-		color: #000000 !important;
+		box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.2);
+		color: #ffffff !important;
 	}
 
 		input[type="submit"]:hover,
@@ -2196,7 +2196,7 @@ input, select, textarea {
 		input[type="button"]:hover,
 		button:hover,
 		.button:hover {
-			box-shadow: inset 0 0 0 1px #47D3E5;
+			box-shadow: inset 0 0 0 1px #47e58e;
 			color: #47D3E5 !important;
 		}
 
@@ -2205,8 +2205,8 @@ input, select, textarea {
 		input[type="button"]:active,
 		button:active,
 		.button:active {
-			background-color: rgba(71, 211, 229, 0.2);
-			box-shadow: inset 0 0 0 1px #47D3E5;
+			background-color: rgba(71, 299, 142, 0.2);
+			box-shadow: inset 0 0 0 1px #47e58e;
 			color: #47D3E5 !important;
 		}
 
