--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -324,7 +324,7 @@ input, select, textarea {
 	}
 
 		a:hover {
-			color: #47e58e;
+			color: #47D3E5;
 		}
 
 	strong, b {
@@ -340,8 +340,8 @@ input, select, textarea {
 	}
 
 	code {
-		background: rgba(225, 225, 225, 0.09);
-		border-color: rgba(225, 225, 225, 0.9);
+		background: rgba(225, 225, 225, 0.5);
+		border-color: rgba(225, 225, 225, 0.5);
 	}
 
 	hr {
@@ -2196,7 +2196,7 @@ input, select, textarea {
 		input[type="button"]:hover,
 		button:hover,
 		.button:hover {
-			box-shadow: inset 0 0 0 1px #47e58e;
+			box-shadow: inset 0 0 0 1px #47D3E5;
 			color: #47D3E5 !important;
 		}
 
@@ -2206,7 +2206,7 @@ input, select, textarea {
 		button:active,
 		.button:active {
 			background-color: rgba(71, 299, 142, 0.2);
-			box-shadow: inset 0 0 0 1px #47e58e;
+			box-shadow: inset 0 0 0 1px #47D3E5;
 			color: #47D3E5 !important;
 		}
 
@@ -2235,6 +2235,30 @@ input, select, textarea {
 			.button.primary:active {
 				background-color: #1ebdd1;
 			}
+
+/* Menu styling */
+	.menu ul {
+	    list-style: none; 
+	    padding: 0; 
+	    margin: 20px 0; 
+	}
+	
+	.menu ul li {
+	    display: inline-block; 
+	    margin-right: 20px; 
+	}
+	
+	.menu-item {
+	    text-decoration: none;
+	    color: #000;
+	    font-size: 1.2em; 
+	    font-weight: bold;
+	    transition: color 0.3s ease; 
+	}
+	
+	.menu-item:hover {
+	    color: #47D3E5;
+	}
 
 /* Form */
 
