--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2205,7 +2205,7 @@ input, select, textarea {
 		input[type="button"]:active,
 		button:active,
 		.button:active {
-			background-color: rgba(71, 299, 142, 0.2);
+			background-color: rgba(71, 211, 229, 0.2);
 			box-shadow: inset 0 0 0 1px #47D3E5;
 			color: #47D3E5 !important;
 		}
@@ -2250,7 +2250,7 @@ input, select, textarea {
 	
 	.menu-item {
 	    text-decoration: none;
-	    color: #000;
+	    color: #fff;
 	    font-size: 1.2em; 
 	    font-weight: bold;
 	    transition: color 0.3s ease; 
