--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2510,7 +2510,7 @@ input, select, textarea {
 	input[type="url"],
 	select,
 	textarea {
-		border-color: rgba(0, 0, 0, 0.2);
+		border-color: rgba(255, 255, 255, 0.2);
 	}
 
 		input[type="text"]:focus,
@@ -2541,13 +2541,13 @@ input, select, textarea {
 
 		input[type="checkbox"] + label:before,
 		input[type="radio"] + label:before {
-			border-color: rgba(0, 0, 0, 0.2);
+			border-color: rgba(255, 255, 255, 0.2);
 		}
 
 	input[type="checkbox"]:checked + label:before,
 	input[type="radio"]:checked + label:before {
 		background-color: #000000;
-		border-color: #000000;
+		border-color: #ffffff;
 		color: #ffffff;
 	}
 
@@ -8359,7 +8359,7 @@ input, select, textarea {
 				#wrapper > .invert .button.primary {
 					background-color: #ffffff;
 					box-shadow: none;
-					color: #000000 !important;
+					color: #ffffff !important;
 				}
 
 					#wrapper > .invert input[type="submit"].primary:hover,
