--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2236,6 +2236,43 @@ input, select, textarea {
 			.button.primary:active {
 				background-color: #1ebdd1;
 			}
+/* Project displaying */
+	.project-card {
+	    position: relative;
+	    display: inline-block; 
+	    margin: 10px; 
+	}
+	
+	.project-image {
+	    width: 200px; 
+	    height: auto; 
+	    transition: transform 0.3s; 
+	}
+	
+	.project-card:hover .project-image {
+	    transform: scale(1.05); 
+	}
+	
+	.project-overlay {
+	    position: absolute;
+	    top: 0;
+	    left: 0;
+	    right: 0;
+	    bottom: 0;
+	    background-color: rgba(0, 0, 0, 0.7); 
+	    color: white;
+	    opacity: 0;
+	    transition: opacity 0.3s; 
+	    display: flex;
+	    flex-direction: column;
+	    align-items: center;
+	    justify-content: center;
+	    padding: 10px; 
+	}
+	
+	.project-card:hover .project-overlay {
+	    opacity: 1;
+	}
 
 /* Menu styling */
 	.menu ul {
