--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2237,41 +2237,46 @@ input, select, textarea {
 				background-color: #1ebdd1;
 			}
 /* Project displaying */
+	.project-container {
+	    display: flex;
+	    gap: 20px; 
+	}
+	
 	.project-card {
 	    position: relative;
-	    display: inline-block; 
-	    margin: 10px; 
+	    width: 200px;
+	    overflow: hidden; 
 	}
 	
 	.project-image {
-	    width: 200px; 
-	    height: auto; 
-	    transition: transform 0.3s; 
+	    width: 100%;
+	    height: auto;
+	    transition: transform 0.3s ease;
 	}
 	
-	.project-card:hover .project-image {
-	    transform: scale(1.05); 
-	}
-	
-	.project-overlay {
+	.project-info {
 	    position: absolute;
 	    top: 0;
 	    left: 0;
 	    right: 0;
 	    bottom: 0;
-	    background-color: rgba(0, 0, 0, 0.7); 
-	    color: white;
-	    opacity: 0;
-	    transition: opacity 0.3s; 
+	    background-color: rgba(0, 0, 0, 0.7); /* Dark overlay */
+	    color: white; 
+	    opacity: 0; 
+	    transition: opacity 0.3s ease;
 	    display: flex;
 	    flex-direction: column;
 	    align-items: center;
 	    justify-content: center;
-	    padding: 10px; 
+	    padding: 10px;
 	}
 	
-	.project-card:hover .project-overlay {
-	    opacity: 1;
+	.project-card:hover .project-image {
+	    transform: scale(1.5); 
+	}
+	
+	.project-card:hover .project-info {
+	    opacity: 1; 
 	}
 
 /* Menu styling */
