--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5882,18 +5882,14 @@ input, select, textarea {
 /* Gallery (transitions) */
 
 	.gallery.onload-fade-in article .image img {
-		-moz-transition: opacity 0.75s ease-in-out, transform 0.25s ease;;
-		-webkit-transition: opacity 0.75s ease-in-out, transform 0.25s ease;;
-		-ms-transition: opacity 0.75s ease-in-out, transform 0.25s ease;;
-		transition: opacity 0.75s ease-in-out, transform 0.25s ease;;
+		-moz-transition: opacity 0.75s ease-in-out;
+		-webkit-transition: opacity 0.75s ease-in-out;
+		-ms-transition: opacity 0.75s ease-in-out;
+		transition: opacity 0.75s ease-in-out;
 		-moz-transition-delay: 4.8s;
 		-webkit-transition-delay: 4.8s;
 		-ms-transition-delay: 4.8s;
 		transition-delay: 4.8s;
-	}
-	
-	.gallery.onload-fade-in article .image img:hover {
-	    transform: scale(1.05); 
 	}
 
 	.gallery.onload-fade-in article:nth-child(1) .image img {
@@ -6140,10 +6136,6 @@ input, select, textarea {
 		-webkit-transition-delay: 4.8s;
 		-ms-transition-delay: 4.8s;
 		transition-delay: 4.8s;
-	}
-
-	.gallery.onload-fade-in article .image img:hover {
-	    transform: scale(1.05);
 	}
 
 	.gallery.onscroll-fade-in article:nth-child(1) .image img {
@@ -6904,7 +6896,6 @@ input, select, textarea {
 			overflow: hidden;
 			width: 22.5rem;
 			max-width: 75vw;
-			transition: transform 0.3s ease;
 		}
 
 			.gallery.style2 article .image {
@@ -6973,7 +6964,6 @@ input, select, textarea {
 
 			.gallery.style2 article:hover .caption {
 				opacity: 1;
-				transform: scale(1.05);
 			}
 
 		@media screen and (max-width: 980px) {
